--- a/Intermediate_DSA_Arrays_Carry_Forward.ipynb
+++ b/Intermediate_DSA_Arrays_Carry_Forward.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "arr = [3, 1, 1, 2, 3, 2]\n",
         "\n",
-        "4 pairs possible in the abobe array, (1, 3), (1, 5), (2, 3), (2, 5)\n",
+        "4 pairs of indices possible in the above array, (1, 3), (1, 5), (2, 3), (2, 5)\n",
         "\n",
         "**Approach to solving the problem:** \n",
         "\n",
