--- a/Intermediate_DSA_Time_Complexity_1.ipynb
+++ b/Intermediate_DSA_Time_Complexity_1.ipynb
@@ -72,7 +72,7 @@
         "\n",
         "**Ans:** 8\n",
         "\n",
-        "**Note:** There are b-a+1 numbers in the range - [a,b], but when we write range(0, N), it is [a,b) i.e b-a numbers in the range(0, N)"
+        "**Note:** There are **b-a+1 numbers in the range - [a,b]**, but when we write **range(0, N) in python code, it is [a,b) i.e b-a numbers in the range(0, N)**"
       ],
       "metadata": {
         "id": "dccRmgIOmIvx"
@@ -94,11 +94,15 @@
       "source": [
         "**Arithmetic Progression**\n",
         "\n",
-        "Consider an Arithmetic Progression (A.P) - a, a+d, a+2d, .......... a+(n-1)d, with 1st term = a, common difference = d and number of terms = n\n",
+        "Consider an Arithmetic Progression (A.P) - a, a+d, a+2d, .......... a+(n-1)d, with - \n",
         "\n",
-        "Nth term of the A.P - a + (n-1)d\n",
+        "    1st term = a, \n",
+        "    common difference = d, and \n",
+        "    number of terms = n\n",
         "\n",
-        "Sum of the A.P - (n * (2*a + (n-1)*d))/2"
+        "Nth term of the A.P : a + (n-1)d\n",
+        "\n",
+        "Sum of the A.P : (n * (2*a + (n-1)*d))/2"
       ],
       "metadata": {
         "id": "gUMoj5BYm8wY"
@@ -109,7 +113,11 @@
       "source": [
         "**Geometric Progression**\n",
         "\n",
-        "Consider a Geometric Progression (G.P) - a, ar, ar^2,.......ar^(n-1), with 1st term = a, common ratio = r and number of terms = n\n",
+        "Consider a Geometric Progression (G.P) - a, ar, ar^2,.......ar^(n-1), with -\n",
+        "\n",
+        "    1st term = a, \n",
+        "    common ratio = r, and \n",
+        "    number of terms = n\n",
         "\n",
         "Nth term of the G.P - a * r^(n-1)\n",
         "\n",
