--- a/Intermediate_DSA_Time_Complexity_2.ipynb
+++ b/Intermediate_DSA_Time_Complexity_2.ipynb
@@ -176,7 +176,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Iterations taken to complete an algorithm defines how good or bad it is"
+        "**Iterations taken to complete an algorithm defines how good or bad it is**"
       ],
       "metadata": {
         "id": "ZNJUjyO_bMIr"
