--- a/Intermediate_DSA_Introduction_to_Arrays.ipynb
+++ b/Intermediate_DSA_Introduction_to_Arrays.ipynb
@@ -62,7 +62,6 @@
         "\n",
         "1.   Storing data in a structured way\n",
         "2.   Retrieving data\n",
-        "\n",
         "1.   Updating (Add/Update/Delete) the data\n",
         "\n",
         "\n",
@@ -95,7 +94,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Accessing/Retieving the data from Arrays/Lists is O(1)**"
+        "**Accessing/Retieving an element from Arrays/Lists is O(1), provided we know the index of the element in the array**"
       ],
       "metadata": {
         "id": "fav6BJ51vKbx"
@@ -190,9 +189,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Quiz2:** int arr[5] = {5,-4,8,9,10}\n",
-        "\n",
-        "**Q:** Print sum of 1st and 5th element ?\n",
+        "**Quiz2:** int arr[5] = {5,-4,8,9,10}, print sum of 1st and 5th element ?\n",
         "\n",
         "**Ans:** print(arr[0]+arr[4])"
       ],
@@ -214,16 +211,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Quiz4:** What is the space complexity of below code ?\n",
+        "**Quiz4:** What is the space complexity of below code ? Following code creates a copy of the passed array. Size of my_list is N.\n",
         "\n",
-        "**Q:** Following code creates a copy of the passed array.\n",
-        "Size of my_list is N.\n",
+        "    def copy_list(my_list):\n",
         "\n",
-        "def copy_list(my_list):\n",
-        "  list2 = []\n",
-        "  for x in my_list:\n",
-        "    list2.append(x)\n",
-        "  return list2\n",
+        "      list2 = []\n",
+        "\n",
+        "      for x in my_list:\n",
+        "\n",
+        "        list2.append(x)\n",
+        "\n",
+        "      return list2\n",
         "\n",
         "**Ans:** O(N)"
       ],
@@ -305,7 +303,7 @@
         "\n",
         "1.   Find max element\n",
         "1.   Count total elements in the array\n",
-        "2.   Subtarct the count of max elements in the array\n",
+        "2.   Subtract the count of max elements in the array from the count of total elements in the array.\n",
         "\n",
         "**Observation:** Max value won't have any value greater than itself\n",
         "\n"
