--- a/Intermediate_DSA_Arrays_Carry_Forward.ipynb
+++ b/Intermediate_DSA_Arrays_Carry_Forward.ipynb
@@ -468,7 +468,8 @@
         "\n",
         "  n = len(a)\n",
         "\n",
-        "  # Keeping max as the starting element, find the occurence of the min element on the right of the max occurence, such that length of the subarray is minimum\n",
+        "  # Keeping max as the starting element, find the occurence of the min element on the right of the max occurence, \n",
+        "  #such that length of the subarray is minimum\n",
         "\n",
         "  ans = 999999999999\n",
         "\n",
@@ -478,7 +479,8 @@
         "        if a[j] == mn:\n",
         "          ans = min(ans, j-i+1)\n",
         "\n",
-        "  # Keeping min as the starting element, find the occurence of the max element on the right of the min occurence, such that length of the subarray is minimum\n",
+        "  # Keeping min as the starting element, find the occurence of the max element on the right of the min occurence, \n",
+        "  # such that length of the subarray is minimum\n",
         "\n",
         "  for i in range(n):\n",
         "    if a[i] == mn:\n",
@@ -544,7 +546,8 @@
         "\n",
         "  ans = len(a)\n",
         "\n",
-        "  # Keeping max as the starting element, find the occurence of the min element on the right of the max occurence, such that length of the subarray is minimum\n",
+        "  # Keeping max as the starting element, find the occurence of the min element on the right of the max occurence, \n",
+        "  # such that length of the subarray is minimum\n",
         "\n",
         "  min_ind = 999999999999\n",
         "\n",
