--- a/Intermediate_DSA_Arrays_Subarrays.ipynb
+++ b/Intermediate_DSA_Arrays_Subarrays.ipynb
@@ -114,9 +114,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "js8PriyLKPLp",
-        "outputId": "8a4cf3b6-cbea-437a-b356-53c4a627bc44"
+        "outputId": "ebbc2907-9412-4e2f-f239-c27e1b81db15"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,13 +147,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Qr2m2lvA_Fq7",
-        "outputId": "2d411fe0-784d-4b00-e242-cbfeeba78eed"
+        "outputId": "73549369-a431-4fdb-b23c-5a7bd354a684"
       },
       "outputs": [
         {
@@ -167,27 +167,34 @@
             "4 2 10 3 12 \n",
             "4 2 10 3 12 -2 \n",
             "4 2 10 3 12 -2 15 \n",
+            "------------------\n",
             "2 \n",
             "2 10 \n",
             "2 10 3 \n",
             "2 10 3 12 \n",
             "2 10 3 12 -2 \n",
             "2 10 3 12 -2 15 \n",
+            "------------------\n",
             "10 \n",
             "10 3 \n",
             "10 3 12 \n",
             "10 3 12 -2 \n",
             "10 3 12 -2 15 \n",
+            "------------------\n",
             "3 \n",
             "3 12 \n",
             "3 12 -2 \n",
             "3 12 -2 15 \n",
+            "------------------\n",
             "12 \n",
             "12 -2 \n",
             "12 -2 15 \n",
+            "------------------\n",
             "-2 \n",
             "-2 15 \n",
-            "15 \n"
+            "------------------\n",
+            "15 \n",
+            "------------------\n"
           ]
         }
       ],
@@ -196,8 +203,10 @@
         "\n",
         "for i in range(0, n):\n",
         "  for j in range(i, n):\n",
+        "    # Calling the PrintSubarray Function to print all possible subarrays\n",
         "    PrintSubarray(arr, i, j)\n",
-        "    print() # Calling the PrintSubarray Function to print all possible subarrays"
+        "    print('')\n",
+        "  print('------------------')"
       ]
     },
     {
@@ -263,9 +272,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vi3MKE84RLEu",
-        "outputId": "74342168-1fa4-4dfd-9a39-860e6ba58499"
+        "outputId": "526f5f26-1b1b-4a8d-90a7-6886d8fb6430"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,6 +314,8 @@
         "    total += a[i]\n",
         "    PS.append(total)\n",
         "\n",
+        "  print(f'Prefix Sum Array : {PS}')\n",
+        "\n",
         "  for i in range(n):\n",
         "\n",
         "    for j in range(i, n):\n",
@@ -329,14 +340,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8D-LSof7U7b2",
-        "outputId": "f868e3a3-1c76-437c-d5d1-6b0c1eb7a3af"
+        "outputId": "d596a7cc-9ada-44e3-e7a4-a33267e3b9e5"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Prefix Sum Array : [4, 6, 16, 19, 31, 29, 44]\n",
             "44\n"
           ]
         }
