--- a/Intermediate_DSA_Arrays_2D_Matrices.ipynb
+++ b/Intermediate_DSA_Arrays_2D_Matrices.ipynb
@@ -270,7 +270,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Print Anti-Diagonal Elements of a matrix\n",
+        "# Method - 1\n",
         "\n",
         "def PrintAntiDiagonalMatrix(A):\n",
         "\n",
@@ -292,6 +292,39 @@
         "outputId": "4bf198e7-483f-4218-c867-189f5646f79d"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Method - 2\n",
+        "\n",
+        "def PrintAntiDiagonalMatrix(A):\n",
+        "\n",
+        "  n = len(A)\n",
+        "\n",
+        "  for i in range(n):\n",
+        "\n",
+        "    print(A[i][n-1-i], end = \" \")\n",
+        "\n",
+        "PrintAntiDiagonalMatrix([[0, 0, 0, 1],[0, 0, 2, 0],[0, 3, 0, 0], [4, 0, 0, 0]])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mNlcbL_nF7Nf",
+        "outputId": "3eeea7bc-26c5-4fed-a1ed-f79d359858d2"
+      },
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
