--- a/Intermediate_DSA_Arrays_Subarrays.ipynb
+++ b/Intermediate_DSA_Arrays_Subarrays.ipynb
@@ -408,9 +408,63 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Method 4 - Cadense Algorithm\n",
+        "\n",
+        "def MaxSubarraySum(a):\n",
+        "\n",
+        "  max_sum = -999999999999999\n",
+        "\n",
+        "  n = len(a)\n",
+        "\n",
+        "  check_sum = 0\n",
+        "\n",
+        "  for i in range(n):\n",
+        "\n",
+        "    check_sum += a[i]\n",
+        "\n",
+        "    if check_sum > max_sum:\n",
+        "\n",
+        "      max_sum = check_sum\n",
+        "\n",
+        "    if check_sum < 0:\n",
+        "\n",
+        "      check_sum = 0\n",
+        "\n",
+        "  return max_sum\n",
+        "\n",
+        "\n",
+        "print(MaxSubarraySum([-4, -2, -10, -3, -12, -2, -15]))\n",
+        "print(MaxSubarraySum([4, 2, -10, 3, 12, -2, 15]))\n",
+        "print(MaxSubarraySum([-4, -2, -10, -3, 12, -2, 15]))\n",
+        "print(MaxSubarraySum([4, 2, 10, 3, 12, -2, 15]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "07mz5Kap2kWZ",
+        "outputId": "7c07fac7-8d47-402e-a48c-3cd2f5adf72a"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-2\n",
+            "28\n",
+            "25\n",
+            "44\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "For the above problem, **T.C** -> O(N^2), **S.C** -> O(1)"
+        "For the above problem, **T.C** -> O(N), **S.C** -> O(1)"
       ],
       "metadata": {
         "id": "sb0z5f_hU2F8"
