--- a/10A_Intermediate_DSA_Bit_Manipulations_1.ipynb
+++ b/10A_Intermediate_DSA_Bit_Manipulations_1.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Intermediate DSA : Bit Manipulations - 1.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -54,17 +53,17 @@
         "\n",
         "For example - \n",
         "\n",
-        "786 in decimal number system can be expanded as : 7 * 100 + 8 * 10 + 6 =\n",
+        "786 in decimal number system can be expanded as : 7 x 100 + 8 x 10 + 6 =\n",
         "\n",
-        "7 * (10^2) + 8 * (10^1) + 6 * (10^0)\n",
+        "7 x (10^2) + 8 x (10^1) + 6 x (10^0)\n",
         "\n",
         "Here, **10 is the base of the decimal number** system whereas **7, 8 and 6 are the digits available in the decimal number system with weights 2, 1 and 0 respectively**.\n",
         "\n",
         "**7 is the Most Significant Digit and 6 is the Least Significant Digit in 786**\n",
         "\n",
-        "Similarly 6954 in decimal number system can be expanded as : 6 * 1000 + 9 * 100 + 5 * 10 + 4 =\n",
+        "Similarly 6954 in decimal number system can be expanded as : 6 x 1000 + 9 x 100 + 5 x 10 + 4 =\n",
         "\n",
-        "6 * (10^3) + 9 * (10^2) + 5 * (10^1) + 4 * (10^0)\n",
+        "6 x (10^3) + 9 x (10^2) + 5 x (10^1) + 4 x (10^0)\n",
         "\n",
         "Here, **10 is the base of the decimal number system** whereas **6, 9, 5 and 4 are the digits available in the decimal number system with weights 3, 2, 1 and 0 respectively**.\n",
         "\n",
@@ -89,7 +88,7 @@
         "\n",
         "So, 125 in Octal Number System is \n",
         "                                  \n",
-        "                                  = 1 * (8^2) + 2 * (8^1) + 5 * (8^0) \n",
+        "                                  = 1 x (8^2) + 2 x (8^1) + 5 x (8^0) \n",
         "                                  \n",
         "                                  = 85 in decimal number system.\n",
         "\n",
@@ -114,7 +113,7 @@
         "\n",
         "10100 in Binary is \n",
         "\n",
-        "                  - 1 * (2^4) + 0 * (2^3) + 1 * (2^2) + 0 * (2^1) + 0 * (2^0)\n",
+        "                  - 1 x (2^4) + 0 x (2^3) + 1 x (2^2) + 0 x (2^1) + 0 x (2^0)\n",
         "\n",
         "                  - 16 + 4\n",
         "\n",
