--- a/10A_Intermediate_DSA_Bit_Manipulations_1.ipynb
+++ b/10A_Intermediate_DSA_Bit_Manipulations_1.ipynb
@@ -94,11 +94,11 @@
         "\n",
         "Vice-Versa, 85 in decimal is \n",
         "                            \n",
-        "                            - 85//8 = **5 as the Remaimder** and 10 as the quotient\n",
+        "                            = 85//8 = 5 as the Remainder and 10 as the quotient\n",
         "\n",
-        "                            - 10//8 = **2 as the Remainder** and 1 as the quotient\n",
+        "                            = 10//8 = 2 as the Remainder and 1 as the quotient\n",
         "\n",
-        "                            - 1//8  = **1 as the Remainder** and 0 as the quoitent\n",
+        "                            = 1//8  = 1 as the Remainder and 0 as the quoitent\n",
         "\n",
         "                            = 1 -> 2 -> 5 or 125 in Octal Number System"
       ],
@@ -113,24 +113,24 @@
         "\n",
         "10100 in Binary is \n",
         "\n",
-        "                  - 1 x (2^4) + 0 x (2^3) + 1 x (2^2) + 0 x (2^1) + 0 x (2^0)\n",
+        "                  = 1 x (2^4) + 0 x (2^3) + 1 x (2^2) + 0 x (2^1) + 0 x (2^0)\n",
         "\n",
-        "                  - 16 + 4\n",
+        "                  = 16 + 4\n",
         "\n",
-        "                  - 20 in decimal number system\n",
+        "                  = 20 in decimal number system\n",
         "\n",
         "\n",
         "Vice-Versa 20 in Decimal is \n",
         "\n",
-        "                  - 20//2 = 0 as the Remainder and 10 as the quotient\n",
+        "                  = 20//2 = 0 as the Remainder and 10 as the quotient\n",
         "\n",
-        "                  - 10//2 = 0 as the Remainder and 5 as the quotient\n",
+        "                  = 10//2 = 0 as the Remainder and 5 as the quotient\n",
         "\n",
-        "                  - 5//2 =  1 as the Remainder and 2 as the quotient\n",
+        "                  = 5//2 =  1 as the Remainder and 2 as the quotient\n",
         "\n",
-        "                  - 2//2 =  0 as the Remainder and 1 as the quotient\n",
+        "                  = 2//2 =  0 as the Remainder and 1 as the quotient\n",
         "\n",
-        "                  - 1//2 =  1 as the Remainder and 0 as the quotient\n",
+        "                  = 1//2 =  1 as the Remainder and 0 as the quotient\n",
         "\n",
         "                  = 1 -> 0 -> 1 -> 0 -> 0 or (10100) as the number in binary number system\n"
       ],
@@ -358,7 +358,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Quiz2:** int a = x // random value x is assigned to a\n",
+        "**Quiz2:** int a = x // random value x is assigned to a,\n",
+        "\n",
         "print(a&1)\n",
         "\n",
         "**Ans:** 0 if a is even and 1 if a is odd\n",
@@ -392,6 +393,7 @@
       "cell_type": "markdown",
       "source": [
         "**Quiz3:** int a = x // random value x is assigned to a\n",
+        "\n",
         "print(a|1)\n",
         "\n",
         "**Ans:** a if x is odd, a+1 if x is even\n",
@@ -406,6 +408,7 @@
       "cell_type": "markdown",
       "source": [
         "**Quiz4:** int a = x // random value x is assigned to a\n",
+        "\n",
         "print(a^1)\n",
         "\n",
         "**Ans:** If a is even, x + 1, If a is odd, x - 1\n",
