--- a/11A_Intermediate_DSA_Bit_Manipulations_2.ipynb
+++ b/11A_Intermediate_DSA_Bit_Manipulations_2.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Intermediate DSA : Bit Manipulations - 2.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -104,9 +103,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Given a number x, to unset some bit, OR with 0.\n",
+        "Given a number x, to unset some bit, AND with 0.\n",
         "\n",
-        "For Ex: for 14 i.e 1110. To set the 3rd bit, perform OR operation with 1011.\n",
+        "For Ex: for 14 i.e 1110. To unset the 3rd bit, perform AND operation with 1011.\n",
         "\n",
         "      1 1 1 0\n",
         "    & 1 0 1 1\n",
@@ -194,7 +193,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Class Question4:** Set the 4th bit of a number (100110) i.e 22"
+        "**Class Question4:** Set the 4th bit of a number (10110) i.e 22"
       ],
       "metadata": {
         "id": "HjQ3pT8lhbUS"
@@ -513,7 +512,7 @@
         "id": "1AxrzBZNgcS2",
         "outputId": "b2cd5ba0-4f47-455e-c378-82440e1ff68f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
