--- a/12A_Intermediate_DSA_Modular_Arithmetic_Introduction.ipynb
+++ b/12A_Intermediate_DSA_Modular_Arithmetic_Introduction.ipynb
@@ -117,19 +117,19 @@
       "source": [
         "**Modular Multiplication:**\n",
         "\n",
-        "(a*b)%M = (a%M * b%M)%M\n",
+        "(a x b) % M = (a % M x b % M) % M\n",
         "\n",
         "Let a = (M x q1) + r1, and b = (M x q2) + r2\n",
         "\n",
-        "Then (a*b)%M\n",
+        "Then (a  x b) % M\n",
         "\n",
-        "    = (((M x q1) + r1) * ((M x q2) + r2))%M\n",
+        "    = (((M x q1) + r1) x ((M x q2) + r2))%M\n",
         "\n",
-        "    = ( M x (q1 * q2) + (r1 * r2) )%M\n",
+        "    = ( M x (q1 x q2) + (r1 x r2) )%M\n",
         "\n",
-        "    = (r1 * r2)%M\n",
+        "    = (r1 x r2)%M\n",
         "\n",
-        "    = (a%M * b%M)%M"
+        "    = (a%M x b%M)%M"
       ],
       "metadata": {
         "id": "2gm24nybXHeu"
