--- a/14A_Intermediate_DSA_Sorting.ipynb
+++ b/14A_Intermediate_DSA_Sorting.ipynb
@@ -332,7 +332,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Another variation of another problem:** What if we have duplicates in the array or for an array with non-distinct elements ? A = [-10, 1, 1, 3, 3, 5, 9]"
+        "**Another variation of above problem:** What if we have duplicates in the array or for an array with non-distinct elements ? A = [-10, 1, 1, 3, 3, 5, 9]"
       ],
       "metadata": {
         "id": "oX-vaiUwpaao"
@@ -347,9 +347,9 @@
         "\n",
         "  A.sort()\n",
         "\n",
-        "  store_value_index = []\n",
+        "  store_value_index = [0]\n",
         "\n",
-        "  for i in range(len(A)):\n",
+        "  for i in range(1, len(A)):\n",
         "\n",
         "    if A[i] == A[i-1]:\n",
         "\n",
@@ -377,9 +377,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Qyb5t1rpnz-",
-        "outputId": "b68fb03f-18d3-465a-e97d-8d98b88b8ddc"
+        "outputId": "052a0895-79f1-46f1-8a00-4a102ecd3fb9"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
