--- a/14B_Intermediate_DSA_Sorting_Coding.ipynb
+++ b/14B_Intermediate_DSA_Sorting_Coding.ipynb
@@ -18,6 +18,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**DIFFERENT SORTING ALGORITHMS IN PYTHON:** https://towardsdatascience.com/sorting-algorithms-with-python-4ec7081d78a1"
+      ],
+      "metadata": {
+        "id": "TJoh3_DmT6C8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Q1. Noble Integer**\n",
         "\n",
         "**Problem Description**\n",
