--- a/15A_Intermediate_DSA_Strings.ipynb
+++ b/15A_Intermediate_DSA_Strings.ipynb
@@ -30,7 +30,11 @@
         "\n",
         "> Palindrome - Max Length Substring\n",
         "\n",
-        "> Sorting"
+        "> Sorting\n",
+        "\n",
+        "> Centres in Substrings\n",
+        "\n",
+        "> Comparators in Python"
       ],
       "metadata": {
         "id": "OTkFyxztD89c"
@@ -443,13 +447,299 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**What are Comparators?**\n",
+        "\n",
+        "**Answer:** Comparator replaces the comparison operation happening in the algorithm because the basis of sorting is comparison of 2 values on the basis of some parameter."
+      ],
       "metadata": {
-        "id": "pfSpQEgUqf9I"
+        "id": "bVYgljxCiKPW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**How Comparators Work:** Supposedly we are trying to compare x and y on the basis of value, then\n",
+        "\n",
+        "    - if x is smaller than y return -1\n",
+        "\n",
+        "    - if x is greater than y return 1\n",
+        "\n",
+        "    - if x is equal to y return 0"
+      ],
+      "metadata": {
+        "id": "5T1xa34ainDH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Class Question6:** Sort array according to factors of the elements in an array. Given array, A = [12, 7, 6, 3, 1]. \n",
+        "\n",
+        "**Solve using comparators**"
+      ],
+      "metadata": {
+        "id": "dn3Ha5hzlEUZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Code Implementation\n",
+        "\n",
+        "# Importing comparator library\n",
+        "\n",
+        "from functools import cmp_to_key\n",
+        "\n",
+        "# Defining function to find total number of factors of a number\n",
+        "\n",
+        "def CountFactors(n):\n",
+        "\n",
+        "  count = 0\n",
+        "\n",
+        "  for i in range(1, n+1):\n",
+        "\n",
+        "    if n%i == 0:\n",
+        "\n",
+        "      count += 1\n",
+        "\n",
+        "  return count\n",
+        "\n",
+        "# Defining function to compare number of factors of 2 numbers\n",
+        "\n",
+        "def compare(a, b):\n",
+        "\n",
+        "  n1 = CountFactors(a)\n",
+        "\n",
+        "  n2 = CountFactors(b)\n",
+        "\n",
+        "  if n1 < n2:\n",
+        "\n",
+        "    return -1\n",
+        "\n",
+        "  elif n1 > n2:\n",
+        "\n",
+        "    return 1\n",
+        "\n",
+        "  else:\n",
+        "\n",
+        "    return 0\n",
+        "\n",
+        "A = [12, 7, 6, 4, 1]\n",
+        "A.sort(key=cmp_to_key(compare))\n",
+        "print(A)"
+      ],
+      "metadata": {
+        "id": "pfSpQEgUqf9I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b3e5166-fb69-42f3-aa0d-de0ae0f1743f"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 7, 4, 6, 12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**In the above code,**\n",
+        "\n",
+        "    'key' maps the values to new values based on which sorting happens, whereas,\n",
+        "\n",
+        "    'comparator' changes the comparison operations happening while sorting. Since, the basis of \n",
+        "    sorting is comparison, we directly change the comparison results."
+      ],
+      "metadata": {
+        "id": "E7Z2CaF2noKT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Class Question7:** Given an array A of non-negative integers, arrange them such that they form the largest number.\n",
+        "\n",
+        "**Example Input**\n",
+        "\n",
+        "Input 1:\n",
+        "\n",
+        " A = [3, 30, 34, 5, 9]\n",
+        "\n",
+        "Input 2:\n",
+        "\n",
+        " A = [2, 3, 9, 0]\n",
+        "\n",
+        "**Example Output**\n",
+        "\n",
+        "Output 1:\n",
+        "\n",
+        " \"9534330\"\n",
+        " \n",
+        "Output 2:\n",
+        "\n",
+        " \"9320\""
+      ],
+      "metadata": {
+        "id": "TQTAC5qspIU6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Code Implementation\n",
+        "\n",
+        "def largestNumber(A):\n",
+        "\n",
+        "  A = [str(x) for x in A]\n",
+        "\n",
+        "  from functools import cmp_to_key\n",
+        "\n",
+        "  def compare(a, b):\n",
+        "\n",
+        "    if a + b > b + a:\n",
+        "\t\t\n",
+        "      return -1\n",
+        "\t\t\t\n",
+        "    if a + b < b + a:\n",
+        "\t\t\n",
+        "      return 1\n",
+        "\t\t\t\n",
+        "    return 0\n",
+        "\n",
+        "  A.sort(key=cmp_to_key(compare))\n",
+        "\n",
+        "  result = ''.join(A)\n",
+        "\n",
+        "  if result=='0'*len(result):\n",
+        "\n",
+        "    return '0'\n",
+        "\n",
+        "  else:\n",
+        "            \n",
+        "    return result\n",
+        "\n",
+        "print(largestNumber([3, 30, 34, 5, 9]))\n",
+        "print(largestNumber([2, 3, 9, 0]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lP6YikHzpWCc",
+        "outputId": "230e6942-1729-4a3c-c859-6af0ae6943c9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9534330\n",
+            "9320\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Class Question8:** Given a string. Find the length of the longest palindromic substring. (Optimized Approach)"
+      ],
+      "metadata": {
+        "id": "CPiMSb1Cx0b5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def OptimizedLongestPalindrome(s):\n",
+        "\n",
+        "  # Iterate on every character as center\n",
+        "\n",
+        "  # Total n centres\n",
+        "\n",
+        "  n = len(s)\n",
+        "\n",
+        "  ans = 0\n",
+        "\n",
+        "  for i in range(n):\n",
+        "\n",
+        "    # s[i] is the center\n",
+        "\n",
+        "    l = i-1\n",
+        "\n",
+        "    r = i+1\n",
+        "\n",
+        "    curr_len = 1\n",
+        "\n",
+        "    while l >= 0 and r < n:\n",
+        "\n",
+        "      if s[l] != s[r]:\n",
+        "\n",
+        "        break\n",
+        "\n",
+        "      curr_len += 2\n",
+        "\n",
+        "      l -= 1\n",
+        "\n",
+        "      r += 1\n",
+        "\n",
+        "    ans = max(ans, curr_len)\n",
+        "\n",
+        "  \n",
+        "  # Now considering centres as space between characters\n",
+        "\n",
+        "  for i in range(n-1):\n",
+        "\n",
+        "    l = i\n",
+        "\n",
+        "    r = i+1\n",
+        "\n",
+        "    curr_len = 0\n",
+        "\n",
+        "    while l >= 0 and r <= n:\n",
+        "\n",
+        "      if s[l] != s[r]:\n",
+        "\n",
+        "        break\n",
+        "\n",
+        "      curr_len += 2\n",
+        "\n",
+        "      l -= 1\n",
+        "\n",
+        "      r += 1\n",
+        "\n",
+        "    ans = max(ans, curr_len)\n",
+        "\n",
+        "  return ans\n",
+        "\n",
+        "print(OptimizedLongestPalindrome('ababababab'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EM7SKJcQyt3b",
+        "outputId": "ff51497b-6d97-4d57-e3ad-aee45c08e9ce"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
     }
   ]
 }
