--- a/20A_Intermediate_DSA_Subsequences_&_Subsets.ipynb
+++ b/20A_Intermediate_DSA_Subsequences_&_Subsets.ipynb
@@ -164,7 +164,7 @@
         "id": "wCCiN6g-ecys",
         "outputId": "5ab6a79c-305b-4710-e999-f0175a9072b5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,6 +182,258 @@
       ],
       "metadata": {
         "id": "UA56ztHzgb1h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Class Question2:** Given a array [-7, 2, 5, 4], find the sum of max value of all the subsequences of the array."
+      ],
+      "metadata": {
+        "id": "dCOMXEFPFPp_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Please Note:** For an array of size i (a1, a2, ........ ai), which is sorted in ascending order, the sum of the max value of all the subsequences of the array =\n",
+        "\n",
+        "    = a1 x 2^0 + a2 x 2^1 + a3 x 2^2 + ............... ai x 2^(i-1)"
+      ],
+      "metadata": {
+        "id": "Z2hxRVW9F_9V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Code Implementation:\n",
+        "\n",
+        "def SumMaxSubsequence(A):\n",
+        "\n",
+        "  A.sort()\n",
+        "\n",
+        "  total = 0\n",
+        "\n",
+        "  for i in range(len(A)):\n",
+        "\n",
+        "    total += A[i] * (2**i)\n",
+        "\n",
+        "  return total\n",
+        "\n",
+        "print(SumMaxSubsequence([7, -1, 5]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rrweKCsyGpCQ",
+        "outputId": "7f68305f-106c-4366-8ef5-447ba6811007"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "37\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The above solution has a **T.C. -> O(NLogN)** and **S.C. -> O(1)**"
+      ],
+      "metadata": {
+        "id": "oshinL8ZHcYc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Class Question3:** Given a array [-7, 2, 5, 4], find the sum of min value of all the subsequences of the array."
+      ],
+      "metadata": {
+        "id": "9B9COQhOKRwG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Code Implementation:\n",
+        "\n",
+        "def SumMaxSubsequence(A):\n",
+        "\n",
+        "  A.sort(reverse = True)\n",
+        "\n",
+        "  total = 0\n",
+        "\n",
+        "  for i in range(len(A)):\n",
+        "\n",
+        "    total += A[i] * (2**i)\n",
+        "\n",
+        "  return total\n",
+        "\n",
+        "print(SumMaxSubsequence([7, -1, 5]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "npwg8LC0KVHQ",
+        "outputId": "34168a3f-594c-4a58-f150-7f8af3264e29"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The above solution has a **T.C. -> O(NLogN)** and **S.C. -> O(1)**"
+      ],
+      "metadata": {
+        "id": "R4p3xB8eKabg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Class Question4:** Given two strings s and t, return true if s is a subsequence of t, or false otherwise.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "McQSP9UnIgzM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solution-1\n",
+        "\n",
+        "class Solution:\n",
+        "  def isSubsequence(self, s: str, t: str) -> bool:\n",
+        "        \n",
+        "    n = len(t)\n",
+        "        \n",
+        "    for i in range(2**n):\n",
+        "            \n",
+        "      curr = ''\n",
+        "            \n",
+        "      for j in range(n):\n",
+        "                \n",
+        "        if i & (1 << j) != 0:\n",
+        "                    \n",
+        "          curr += t[j]\n",
+        "                    \n",
+        "      if curr == s:\n",
+        "                \n",
+        "        return True\n",
+        "            \n",
+        "    return False\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  \n",
+        "  X = Solution()\n",
+        "  print(X.isSubsequence('abc', 'ahbgdc'))\n",
+        "  print(X.isSubsequence('axc', 'ahbgdc'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PCZla2xbIulm",
+        "outputId": "e06c28c9-65ef-4444-ae4b-d24cb15ae9fd"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The above solution has a **T.C. -> O(N^2)** and **S.C. -> O(1)**"
+      ],
+      "metadata": {
+        "id": "dhnfIZWvJesH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solution-2\n",
+        "\n",
+        "class Solution:\n",
+        "  def isSubsequence(self, s: str, t: str) -> bool:\n",
+        "        \n",
+        "    i, j = 0, 0\n",
+        "        \n",
+        "    while i < len(s) and j < len(t):\n",
+        "            \n",
+        "      if s[i] == t[j]:\n",
+        "                \n",
+        "        i += 1\n",
+        "                \n",
+        "      j += 1\n",
+        "            \n",
+        "    if i == len(s):\n",
+        "            \n",
+        "      return True\n",
+        "        \n",
+        "    else:\n",
+        "            \n",
+        "      return False\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  \n",
+        "  X = Solution()\n",
+        "  print(X.isSubsequence('abc', 'ahbgdc'))\n",
+        "  print(X.isSubsequence('axc', 'ahbgdc'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "048LQEvUJlRN",
+        "outputId": "da858692-ab2d-41f9-db45-9c42efd98e2b"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The above solution has a **T.C. -> O(N)** and **S.C. -> O(1)**"
+      ],
+      "metadata": {
+        "id": "-7Ggg9hGKAag"
       }
     }
   ]
